# Quad-Mujoco

./: CLAUDE.md  README.md  SE3_README.md  compare_controllers.py  export_model.py  justfile  main.py  main_se3.py  nmpc_controller.py  pyproject.toml  view_entry.py
crazyfile/: scene.xml
quad_mujoco/: __init__.py  controller.py  geometry_se3.py  motor_mixer.py  physics.py  se3_controller.py
