[project]
name = "quad-mujoco"
version = "0.1.0"
description = "Quadrotor simulation with MuJoCo visualization"
authors = [
    {name = "Wakkk", email = ""},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mujoco>=3.0.0",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quad_mujoco"]

[tool.hatch.build.targets.sdist]
include = [
    "quad_mujoco",
    "main.py",
    "crazyfile",
    "images",
    "README.md",
]
